cros: Make the captive portal dialog closeable.

This CL moves the dialog host to its own class and widget which fills
the entire screen. This allows the captive portal dialog to be
interactible in any location it could be rendered in. We also add an
observer to CaptivePortalWindowProxy to allow OobeUIDialogDelegate to
show/hide the host widget when the captive portal dialog is about to
be shown or has just been hidden.

Bug: 870864
Change-Id: I898342795a3ecc950c6e4c273582962a2c70122b
Reviewed-on: https://chromium-review.googlesource.com/1187512
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586428}
Former-commit-id: 7e23a87c67945a3b5052331993e2362cbc140258