chrome/browser/chromeos/login/screens/error_screen.cc
@@ -110,12 +110,8 @@ void ErrorScreen::AllowOfflineLogin(bool allowed) {
 }
 
 void ErrorScreen::FixCaptivePortal() {
-  if (!captive_portal_window_proxy_.get()) {
-    content::WebContents* web_contents =
-        LoginDisplayHost::default_host()->GetOobeWebContents();
-    captive_portal_window_proxy_.reset(new CaptivePortalWindowProxy(
-        network_state_informer_.get(), web_contents));
-  }
+  MaybeInitCaptivePortalWindowProxy(
+      LoginDisplayHost::default_host()->GetOobeWebContents());
   captive_portal_window_proxy_->ShowIfRedirected();
 }
 
@@ -178,6 +174,14 @@ void ErrorScreen::ShowConnectingIndicator(bool show) {
 ErrorScreen::ConnectRequestCallbackSubscription
 ErrorScreen::RegisterConnectRequestCallback(const base::Closure& callback) {
   return connect_request_callbacks_.Add(callback);
+}
+
+void ErrorScreen::MaybeInitCaptivePortalWindowProxy(
+    content::WebContents* web_contents) {
+  if (!captive_portal_window_proxy_.get()) {
+    captive_portal_window_proxy_ = std::make_unique<CaptivePortalWindowProxy>(
+        network_state_informer_.get(), web_contents);
+  }
 }
 
 void ErrorScreen::Show() {
